feature: create apis for collection dashboard and view all the student fee payment